fixing footer icons in dark mode.

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -7,7 +7,7 @@ footer {
     a {
         margin-right: 0.5em;
     }
-    .footer-logo {
+    svg {
         width: 1em;
     }
 }
